# automated-optical-lab

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
doc/: device-driver.md  experiment-module.md  safety-features.md  system-architecture.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/devices/: cld1015.rs  mod.rs  mpm210h.rs
src-tauri/src/experiment/: data.rs  mod.rs
src/components/: ControlsPanel.vue  DeviceControls.vue  DeviceStatus.vue  LIPlot.vue
src/components/cld1015/: CLD1015Panel.vue  CurrentControl.vue  LaserStatus.vue  TemperatureControl.vue
src/components/common/: ConnectionStatus.vue  ParameterSlider.vue
src/components/experiments/: AutomationSetup.vue
src/components/mpm210h/: MPM210HPanel.vue
src/types/: interfaces.ts
src/views/: MainView.vue
