[package]
name = "automated-optical-lab"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.0.0"  # Add this plugin instead of shell-open feature
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.7.1"
visa-rs = { git = "https://github.com/TsuITOAR/visa-rs.git" }
thiserror = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
