[package]
name = "automated-optical-lab"
version = "0.1.0"
description = "Automated optical laboratory control suite"
authors = ["Elena Savva"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.0.0"  # Add this plugin instead of shell-open feature
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.7.1"
visa-rs = { git = "https://github.com/TsuITOAR/visa-rs.git" }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
csv = "1.2"
chrono = "0.4.41"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
